--- a/file/app/home/plugin/pc/static/common/header.html
+++ b/file/app/home/plugin/pc/static/common/header.html
@@ -114,3 +114,7 @@
 		</div>
 	</div>
 </header>
+
+<div id="float_button">
+	<button class="mm_btn btn_primary hide" id="scroll_top"><i class="fa-angle-up"></i></button>
+</div>
