--- a/file/app/home/plugin/pc/static/contact.html
+++ b/file/app/home/plugin/pc/static/contact.html
@@ -10,13 +10,21 @@
 				<main>
 					<!-- 路径导航 -->
 					<div class="mm_warp">
-						
+						<div class="mm_container">
+							<div class="mm_row">
+								<div class="mm_col col-12 col-md-4">
+									<div class="mm_view">
+										
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</main>
 				${@view('./common/footer.html')}
 			</div>
 		</div>
-		
+
 		<!-- 公共js -->
 		<script src="/home/pc/js/common.js"></script>
 		<!-- 实例化VUE业务 -->
@@ -24,8 +32,7 @@
 			var app = new Vue({
 				el: "#app",
 				mixins: [mixin_page],
-				mounted() {
-				}
+				mounted() {}
 			});
 		</script>
 	</body>
